# probely-python-homework

./: Makefile  README.md  pyproject.toml
src/: manage.py
src/findings/: apps.py  models.py  serializers.py  urls.py  views.py
src/findings/management/commands/: load_findings.py  retrieve_findings.py
src/findings/migrations/: 0001_initial.py
src/probely/: asgi.py  settings.py  urls.py  wsgi.py
src/probely/clients/: probely.py  tests.py
tests/: test_findings.py  test_probely_client.py  test_retrieve_findings_command.py
tests/fixtures/: findings_response.json
